Fix squashed images on desktop/tablet view

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -402,6 +402,7 @@ body.ended #reset {
   #players img {
     width: 5em;
     height: initial;
+    max-height: initial;
   }
 
   #players span {
